tests/ui/fail/context-type-generics-01.rs
fn main() {}

#[union_fn::union_fn]
trait Foo {
    type Context<T> = T;
    
    fn foo(ctx: &mut Self::Context) {}
}
